redis added into the Event Service

--- a/eventservice/eventservice/src/main/resources/application.properties
+++ b/eventservice/eventservice/src/main/resources/application.properties
@@ -12,10 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
-
-# Force Eureka to register your service using your local LAN IP 192.168.1.x
-eureka.instance.prefer-ip-address=true
-eureka.instance.ip-address=192.168.1.9
-eureka.instance.hostname=192.168.1.9
-
+#redis Config
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
